Fix img centering on small screens

--- a/src/components/utils/Index.module.css
+++ b/src/components/utils/Index.module.css
@@ -52,6 +52,7 @@
   left: 50%;
   transform: translate(-50%, 0);
   border-radius: 8px;
+  max-height: 50rem;
 }
 .projectDescription {
   padding: 0.8rem 1.6rem 1.6rem;
@@ -74,6 +75,10 @@
   }
   .projectLogo {
     margin-bottom: 0rem;
+  }
+  .projectLogo img {
+    left: 0;
+    transform: none;
   }
   .header {
     text-align: center;
